# agentcore-push

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: knowledge.md  plan.md  spec.md  todo.md
examples/: test.py
src/agentcore_push/: __init__.py  aws_deploy.py  cli.py  config.py  deploy.py  errors.py  naming.py  packager.py  quickstart.py
tests/: test_aws_deploy.py  test_naming.py  test_packager.py  test_quickstart.py
